# KPI_tasks

./: .gitignore  README.md  pyproject.toml
Control_Task/: Control_Task.ipynb  Readme.md
HW_1/: 136.xlsx  NeuronRecords.csv  Official_hrivnya.csv  first.ipynb  first.py  fourth.py  second.py  third.py
HW_1/data/: 136-indeksi-spozhivchikh-tsin.csv  136.csv  Official hrivnya exchange rates.csv  UATown.csv
HW_1/py_files/: convert.py  second.py  third.py
HW_2/: Module_2.ipynb
HW_2/format_py/: first.py  second.py  third.py
HW_3/: Task_3.ipynb
HW_5/: Task_5.ipynb
HW_6/: Readme.md  Task_6.ipynb
HW_7/: README.md  Task_7_1.ipynb  Task_7_2.ipynb
HW_7/data/: birth_params.csv  data_years.csv  death_params - ЖІН.csv  death_params - ЧОЛ.csv
HW_8/: Task_8.ipynb
HW_9/: Task_9.ipynb
LAB_Physics/: LAB_WORK_12_2.py
LAB_Physics/LAB_12_2/: CC.xlsx  LAB_WORK_12_2.py
RadioPhysics/: README.md
RadioPhysics/HCT_2/: HCT_2.ipynb
RadioPhysics/HCT_3/: HCT_3.ipynb
RadioPhysics/Task_1/: README.md  Task_1.ipynb
RadioPhysics/Task_2/: HW_2_3.py  HW_2_4.py  HW_2_5.py  norm_2_5.py
TASK_7/: Task_7.ipynb
