[tool.poetry]
name = "kpi-tasks"
version = "0.1.0"
description = ""
authors = ["Victor <86537032+VAlduinV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = { version = "^1.26.1", python = ">=3.9, <3.13" }
scipy = { version = "^1.11.3", python = ">=3.9, <3.13" }
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
mplcyberpunk = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
