[tool.poetry]
name = "kpi-tasks"
version = "0.1.0"
description = ""
authors = ["Victor <86537032+VAlduinV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
tabulate = "^0.9.0"
sympy = "^1.12"
seaborn = "^0.13.0"
scikit-learn = "1.2.2"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
